--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    tools:context=".ui.fragments.NameFragment">
+    tools:context=".presentation.names.NameFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/iv_love"
