--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    tools:context=".ui.fragments.ResultFragment">
+    tools:context=".presentation.result.ResultFragment">
 
     <ImageView
         android:id="@+id/img_lams"
