--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/nameFragment">
+    app:startDestination="@id/onBoardFragment">
 
     <fragment
         android:id="@+id/nameFragment"
@@ -15,4 +15,8 @@
         android:name="com.example.lovecalculator.presentation.result.ResultFragment"
         android:label="fragment_result"
         tools:layout="@layout/fragment_result" />
+    <fragment
+        android:id="@+id/onBoardFragment"
+        android:name="com.example.lovecalculator.presentation.onboard.OnBoardFragment"
+        android:label="OnBoardFragment" />
 </navigation>
